added download page

--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,7 +1,10 @@
 <mat-toolbar>
-  <img class="logo" src="assets/Logo.png">
+  <a routerLink="">
+    <img class="logo" src="assets/Logo.png">
+  </a>
   <span class="flexExpand"></span>
-  <a class="tool">
+  <a class="tool"
+     routerLink="/settings">
     <mat-icon class="tool" svgIcon="gear-solid"></mat-icon>
   </a>
 </mat-toolbar>
