--- a/src/app/part-table/part-table.component.html
+++ b/src/app/part-table/part-table.component.html
@@ -1,21 +1,28 @@
-<p>part-table works!</p>
-
-
-<!--<p-table [value]="products" [tableStyle]="{ 'min-width': '50rem' }">-->
-<!--  <ng-template pTemplate="header">-->
-<!--    <tr>-->
-<!--      <th>Code</th>-->
-<!--      <th>Name</th>-->
-<!--      <th>Category</th>-->
-<!--      <th>Quantity</th>-->
-<!--    </tr>-->
-<!--  </ng-template>-->
-<!--  <ng-template pTemplate="body" let-product>-->
-<!--    <tr>-->
-<!--      <td>{{ product.code }}</td>-->
-<!--      <td>{{ product.name }}</td>-->
-<!--      <td>{{ product.category }}</td>-->
-<!--      <td>{{ product.quantity }}</td>-->
-<!--    </tr>-->
-<!--  </ng-template>-->
-<!--</p-table>-->
+<p-table [value]="parts" [tableStyle]="{ 'min-width': '50rem' }">
+  <ng-template pTemplate="header">
+    <tr>
+      <th>name</th>
+      <th>quantity</th>
+      <th>partType</th>
+      <th>manufacturer</th>
+      <th>storage location</th>
+      <th>value</th>
+      <th>footprint</th>
+      <!--      <th style="width: 5rem"></th>-->
+    </tr>
+  </ng-template>
+  <ng-template pTemplate="body" let-part>
+    <tr>
+      <td>{{ part.name }}</td>
+      <td>{{ part.quantity }}</td>
+      <td>{{ part.partType?.name }}</td>
+      <td>{{ part.manufacturer?.name }}</td>
+      <td>{{ getStorageLocation(part) }}</td>
+      <td>{{ part.value }}</td>
+      <td>{{ part.footprint?.name }}</td>
+      <!--      <td>-->
+      <!--        <button type="button" pButton pRipple icon="pi pi-plus" (click)="selectProduct(product)"></button>-->
+      <!--      </td>-->
+    </tr>
+  </ng-template>
+</p-table>
