--- a/src/app/part-table/part-table.component.html
+++ b/src/app/part-table/part-table.component.html
@@ -1,4 +1,4 @@
-<p-table [value]="parts" [tableStyle]="{ 'min-width': '50rem' }">
+<p-table [value]="parts" [scrollable]="true"  scrollHeight="50rem" [tableStyle]="{ 'min-width': '50rem' }">
   <ng-template pTemplate="header">
     <tr>
       <th>name</th>
@@ -8,7 +8,8 @@
       <th>storage location</th>
       <th>value</th>
       <th>footprint</th>
-      <!--      <th style="width: 5rem"></th>-->
+      <th style="width: 5rem">edit</th>
+      <th style="width: 5rem">delete</th>
     </tr>
   </ng-template>
   <ng-template pTemplate="body" let-part>
@@ -20,9 +21,12 @@
       <td>{{ getStorageLocation(part) }}</td>
       <td>{{ part.value }}</td>
       <td>{{ part.footprint?.name }}</td>
-      <!--      <td>-->
-      <!--        <button type="button" pButton pRipple icon="pi pi-plus" (click)="selectProduct(product)"></button>-->
-      <!--      </td>-->
+      <td>
+        <p-button icon="pi pi-pencil" severity="warning" (onClick)="edit(part)"></p-button>
+      </td>
+      <td>
+        <p-button icon="pi pi-trash" severity="danger" (click)="delete(part)"></p-button>
+      </td>
     </tr>
   </ng-template>
 </p-table>
