--- a/src/app/part-table/part-table.component.html
+++ b/src/app/part-table/part-table.component.html
@@ -10,6 +10,9 @@
       <th>footprint</th>
       <th style="width: 5rem">edit</th>
       <th style="width: 5rem">delete</th>
+      <th>
+        <p-button icon="pi pi-plus" severity="info" (click)="add()"></p-button>
+      </th>
     </tr>
   </ng-template>
   <ng-template pTemplate="body" let-part>
@@ -27,6 +30,7 @@
       <td>
         <p-button icon="pi pi-trash" severity="danger" (click)="delete(part)"></p-button>
       </td>
+      <td></td>
     </tr>
   </ng-template>
 </p-table>
