--- a/src/app/dialogs/part-dialog/part-dialog.component.html
+++ b/src/app/dialogs/part-dialog/part-dialog.component.html
@@ -1,1 +1,78 @@
-<p>part-dialog works!</p>
+<span class="p-float-label">
+    <input pInputText id="name" [(ngModel)]="value"/>
+    <label for="name">Name</label>
+</span>
+<span class="p-float-label">
+    <p-inputNumber inputId="integeronly" id="quantity" [(ngModel)]="value"> </p-inputNumber>
+    <label for="quantity">Quantity</label>
+</span>
+<div class="card flex justify-content-center">
+  <p-dropdown [options]="partTypes" [(ngModel)]="value" optionLabel="name" [filter]="true" filterBy="name"
+              [showClear]="true" placeholder="PartType">
+    <ng-template pTemplate="selectedItem">
+      <div class="flex align-items-center gap-2" *ngIf="value">
+        <div>{{ value.name }}</div>
+      </div>
+    </ng-template>
+    <ng-template let-partType pTemplate="item">
+      <div class="flex align-items-center gap-2">
+        <div>{{ partType.name }}</div>
+      </div>
+    </ng-template>
+  </p-dropdown>
+</div>
+<div class="card flex justify-content-center">
+  <p-dropdown [options]="manufacturers" [(ngModel)]="value" optionLabel="name" [filter]="true" filterBy="name"
+              [showClear]="true" placeholder="Manufacturer">
+    <ng-template pTemplate="selectedItem">
+      <div class="flex align-items-center gap-2" *ngIf="value">
+        <div>{{ value.name }}</div>
+      </div>
+    </ng-template>
+    <ng-template let-manufacturer pTemplate="item">
+      <div class="flex align-items-center gap-2">
+        <div>{{ manufacturer.name }}</div>
+      </div>
+    </ng-template>
+  </p-dropdown>
+</div>
+
+
+<div class="card flex justify-content-center">
+  <p-dropdown [options]="measurementUnits" [(ngModel)]="value" optionLabel="name" [filter]="true" filterBy="name"
+              [showClear]="true" placeholder="MeasurementUnit">
+    <ng-template pTemplate="selectedItem">
+      <div class="flex align-items-center gap-2" *ngIf="value">
+        <div>{{ value.name }}</div>
+      </div>
+    </ng-template>
+    <ng-template let-measurementUnit pTemplate="item">
+      <div class="flex align-items-center gap-2">
+        <div>{{ measurementUnit.name }}</div>
+      </div>
+    </ng-template>
+  </p-dropdown>
+</div>
+<span class="p-float-label">
+    <p-inputNumber inputId="integeronly" id="value" [(ngModel)]="value"> </p-inputNumber>
+    <label for="value">Value</label>
+</span>
+<div class="card flex justify-content-center">
+  <p-dropdown [options]="footprints" [(ngModel)]="value" [filter]="true" filterBy="name"
+              [showClear]="true" placeholder="Footprint">
+    <ng-template pTemplate="selectedItem">
+      <div class="flex align-items-center gap-2" *ngIf="value">
+        <div>{{ value }}</div>
+      </div>
+    </ng-template>
+    <ng-template let-footprint pTemplate="item">
+      <div class="flex align-items-center gap-2">
+        <div>{{ footprint }}</div>
+      </div>
+    </ng-template>
+  </p-dropdown>
+</div>
+
+
+<p-button severity="success" (onClick)="onSaveClick()">Save</p-button>
+<p-button severity="danger" (click)="onCancelClick()">Cancel</p-button>
