added toolbar with add buttons

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,21 @@
 <div>
   <header>
-    <p-menubar>
-      <ng-template pTemplate="start">
-        <img src="assets/Logo.svg" height="45" class="mr-2"/>
-      </ng-template>
-    </p-menubar>
+
+    <p-toolbar [style]="{'height': '4rem','padding-top': '0','padding-bottom': '0'}">
+      <div class="p-toolbar-group-start">
+        <a routerLink="">
+          <img src="assets/Logo.svg" height="50" class="mr-2"/>
+        </a>
+      </div>
+      <div class="p-toolbar-group-end">
+        <p-button severity="info" class="mr-2" (onClick)="addShelf()">Add Shelf</p-button>
+        <p-button severity="info" class="mr-2" (onClick)="addFootprint()">Add Footprint</p-button>
+        <p-button severity="info" class="mr-2" (onClick)="addMeasurementUnit()">Add MeasurementUnit</p-button>
+        <p-button severity="info" class="mr-2" (onClick)="addManufacturer()">Add Manufacturer</p-button>
+        <p-button severity="info" (onClick)="addPartType()">Add PartType</p-button>
+      </div>
+    </p-toolbar>
+
   </header>
   <br>
   <main>
