--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,15 +8,29 @@
         </a>
       </div>
       <div class="p-toolbar-group-end">
-        <p-button severity="info" class="mr-2" (onClick)="addShelf()">Add Shelf</p-button>
-        <p-button severity="info" class="mr-2" (onClick)="addFootprint()">Add Footprint</p-button>
-        <p-button severity="info" class="mr-2" (onClick)="addMeasurementUnit()">Add MeasurementUnit</p-button>
-        <p-button severity="info" class="mr-2" (onClick)="addManufacturer()">Add Manufacturer</p-button>
-        <p-button severity="info" (onClick)="addPartType()">Add PartType</p-button>
+
+        <div style="padding: 0.5rem; {{highlighterItem('data')}}">
+          <a routerLink="data">
+            <i class="pi pi-box" style="font-size: 2rem;color: white"></i>
+          </a>
+        </div>
+
+        <div style="padding: 0.5rem; {{highlighterItem('settings')}}">
+          <a routerLink="settings">
+            <i class="pi pi-cog" style="font-size: 2rem;color: white"></i>
+          </a>
+        </div>
+
+        <div style="padding: 0.5rem; {{highlighterItem('user')}}">
+          <a routerLink="user">
+            <i class="pi pi-user" style="font-size: 2rem;color: white"></i>
+          </a>
+        </div>
       </div>
     </p-toolbar>
 
   </header>
+
   <br>
   <main>
     <p-toast></p-toast>
